--- a/recipes/chocchipcookies.html
+++ b/recipes/chocchipcookies.html
@@ -6,7 +6,7 @@
   </head>
     <body>
       <h1>Chocolate Chip Cookies!</h1>
-      <img src="https://images-gmi-pmc.edge-generalmills.com/087d17eb-500e-4b26-abd1-4f9ffa96a2c6.jpg">
+      <img src="https://images-gmi-pmc.edge-generalmills.com/087d17eb-500e-4b26-abd1-4f9ffa96a2c6.jpg" alt="Chocolate chip cookies">
       <h3>Description</h3>
         <p>The good ol' chocolate chip cookie. Crispy edges, gooey center, chocolate chips melting down the sides, makes my mouth water just thinking about it.</p>
       <h4>Ingredients</h4>
