--- a/recipes/pbcookies.html
+++ b/recipes/pbcookies.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Peanut Butter Cookies!</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4519055.jpg&w=596&h=399&c=sc&poi=face&q=85">
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4519055.jpg&w=596&h=399&c=sc&poi=face&q=85" alt="Peanut butter cookies"> 
     <h3>Description</h3>
       <p>Can't go wrong with peanut butter cookies, and these are easy to make and and taste delicious too. Almost everyone always has these ingredients on hand,
          so what are you waiting for?!</p>
