--- a/recipes/chocchipcookies.html
+++ b/recipes/chocchipcookies.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="../style.css">
     <meta charset="utf-8>">
     <title>Chocolate Chip Cookies</title>
   </head>
@@ -32,6 +33,6 @@
             ungreased pans.</li>
           <li>Bake for about 10 minutes in the preheated oven, or until edges are nicely browned.</li>
         </ol>
-        <a href="https://www.allrecipes.com/recipe/10813/best-chocolate-chip-cookies/">Credit</a>
+        <a class="credit" href="https://www.allrecipes.com/recipe/10813/best-chocolate-chip-cookies/">Credit</a>
     </body>
 </html>
