--- a/recipes/choccookies.html
+++ b/recipes/choccookies.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="../style.css">
     <meta charset="utf-8">
     <title>Chocolate Cookies</title>
   </head>
   
   <body>
-    <h1>Chocolate Cookies!</h1>
+    <h1 class="choc center">Chocolate Cookies!</h1>
     <img src="https://d1uz88p17r663j.cloudfront.net/original/2020_06_09T08_21_31_mrs_ImageRecipes_144807lrg.jpg" alt="Chocolate cookies">
-    <h3>Description</h3>
+    <h3 class="choc">Description</h3>
       <p>Look, chocolate cookies are good. But what if you had chocolate cookies with <strong>chocolate chips?</strong>. Well, you've come to the right place. Try these chocolate-y cookies today!</p>
-    <h4>Ingredients</h4>
+    <h4 class="choc">Ingredients</h4>
       <ul>
         <li>1 cup butter, softened</li>
         <li>1 1/2 cups white sugar</li>
@@ -23,7 +24,7 @@
         <li>2 cups semisweet chocolate chips</li>
         <li>1/2 cup chopped walnuts (Optional)</li> 
       </ul>
-    <h4>Directions</h4>
+    <h4 class="choc">Directions</h4>
       <ol>
         <li>Preheat oven to 350 degrees F (175 degrees C).
         <li>In large bowl, beat butter, sugar, eggs, and vanilla until light and fluffy. Combine the flour, cocoa, baking soda, and salt; stir into the butter mixture until well blended.
@@ -31,5 +32,5 @@
         <li>Bake for 8 to 10 minutes in the preheated oven, or just until set. Cool slightly on the cookie sheets before transferring to wire racks to cool completely.</li>
       </ol>
 
-    <a href="https://www.allrecipes.com/recipe/9827/chocolate-chocolate-chip-cookies-i/">Credit</a>
+    <a class="credit" href="https://www.allrecipes.com/recipe/9827/chocolate-chocolate-chip-cookies-i/">Credit</a>
   </body>
