--- a/recipes/pbcookies.html
+++ b/recipes/pbcookies.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="../style.css">
     <meta charset="utf-8">
     <title>Peanut Butter Cookies</title>
 </head>
 <body>
-    <h1>Peanut Butter Cookies!</h1>
+    <h1 class="whoa-factor">Peanut Butter Cookies!</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4519055.jpg&w=596&h=399&c=sc&poi=face&q=85" alt="Peanut butter cookies"> 
-    <h3>Description</h3>
+    <h3 class="whoa-factor">Description</h3>
       <p>Can't go wrong with peanut butter cookies, and these are easy to make and and taste delicious too. Almost everyone always has these ingredients on hand,
          so what are you waiting for?!</p>
-    <h4>Ingredients</h4>
+    <h4 class="whoa-factor">Ingredients</h4>
       <ul>
           <li>1 cup peanut butter</li>
           <li>1 cup white sugar</li>
           <li>1 egg</li>
       </ul>
-    <h4>Directions</h4>
+    <h4 class="whoa-factor">Directions</h4>
       <ol>
         <li>Preheat oven to 350 degrees F (175 degrees C).</li>
         <li>Mix peanut butter, sugar, and egg together in a bowl using an electric mixer until
@@ -26,7 +27,7 @@
           before moving to a plate.
         </li>
       </ol>
-      <a href="https://www.allrecipes.com/recipe/244614/3-ingredient-peanut-butter-cookies/"> Credit</a>
+      <a class="credit" href="https://www.allrecipes.com/recipe/244614/3-ingredient-peanut-butter-cookies/"> Credit</a>
       
 </body>
 </html>
